# kpassrunner

./: CMakeLists.txt  LICENSE  README.md  krunner.notifyrc  metadata.json  passrunner.cpp  passrunner.h  passrunner.notifyrc
